	figure out whether after a deletion a full refresh is needed, before
	doing a redraw of the current line.  This fixes Savannah bug #46794.
	* src/nano.c (do_output): Let reset_multis() figure out whether after
	an addition a full refresh is needed (for multiline-regexes' sake),
	instead of doing it always.
	* src/color.c (reset_multis): Abort when having no multiline regexes.

2016-01-02  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_spell, do_formatter): Plug three tiny memory leaks.
	* src/text.c (do_alt_speller, do_formatter): There is no need here to
	reinitialize the windows; it will be done when polling the keybuffer.
	* src/winio.c (do_credits): Correctly restore the settings of NO_HELP
	and MORE_SPACE.

2015-12-31  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_formatter): Restore the cursor position differently.
	* src/search.c (do_gotopos): Delete this now unused function.
	* src/search.c (do_gotolinecolumn): Chop an always FALSE parameter.
	* src/search.c (do_gotolinecolumn): Chop a duplicate parameter --
	'allow_update' always has the same value as 'interactive'.

2015-12-30  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (main), src/files.c (open_buffer): Don't try to position
	the cursor when opening a buffer failed (because the user specified a
	directory, for example).  This fixes Savannah bug #46778.
	* doc/syntax/ocaml.nanorc: Normalize the comments.

2015-12-29  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/{c,objc,asm}.nanorc: Disable the regex for multiline
	strings as it colours some things wrong and is a glutton on time.

2015-12-23  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (do_writeout, do_writeout_void), src/global.c
	(shortcut_init, strtosc), src/nano.c (do_exit, close_and_go),
	doc/man/nanorc.5, doc/texinfo/nano.texi: In the writeout menu,
	offer ^Q to close and discard the buffer without saving it.  By
	default, the key is bound only when --tempfile is in effect.