@@ -6,6 +6,7 @@
 	an addition a full refresh is needed (for multiline-regexes' sake),
 	instead of doing it always.
 	* src/color.c (reset_multis): Abort when having no multiline regexes.
+	* src/nano.c (do_input): A functionless shortcut should be impossible.
 
 2016-01-02  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (do_spell, do_formatter): Plug three tiny memory leaks.
